--- a/client/src/page/Login/Login.scss
+++ b/client/src/page/Login/Login.scss
@@ -1,4 +1,4 @@
-.form-control.input-box {
+.input-box {
   border: none;
   border-bottom: 1px solid #ccc;
   border-radius: 0;
@@ -6,7 +6,7 @@
   opacity: 0.8;
 }
 
-.btn.login-button {
+.login-button {
   background-color: #3cdc91;
   border: none;
   color: black;
